--- a/src/tabs/Chat/Chat.css
+++ b/src/tabs/Chat/Chat.css
@@ -139,7 +139,10 @@ textarea::placeholder {
 .messages-display {
     flex-grow: 1; 
     overflow-y: auto; 
-    padding: 10px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    padding-right: 8px;
+    padding-left: 0px;
     border-radius: var(--corner-radius);
   }
   
